# krenciklab_rotation

./: .gitignore  README.md  aqua2.ipynb  config_3.11.26.sh  config_4.26.26.sh  pyproject.toml  run_aqua2.m  run_aqua2.sh  run_make_avi.sh  run_normcorre.sh  run_pipeline.sh  run_quantify.sh
aqua2kit/: __init__.py  aqua2_io.py  cli.py  lif_io.py  quantify.py
astrocyte_neuron/: lif_to_tiff.py  lif_to_tiff_batch2.py  lif_to_tiff_batch3.py
astrocyte_neuron_out/: analyze_astro_neuron.py
astrocyte_neuron_out_batch2/: analyze_astro_neuron_batch2.py
astrocyte_neuron_out_batch3/: analyze_astro_neuron_batch3.py  make_abo_histogram.py  make_pptx.py  make_pptx_rotation.py  make_pptx_v2.py
coculture/: analyze_aqua2.py  coculture_aqua2_figure.ipynb
src/: make_avi.m  run_aqua2.m  run_normcorre.m
src/aqua2kit/: __init__.py  aqua2_io.py  cli.py  lif_io.py  plot.py  quantify.py  stamp.py  utils.py
